# strip-html-attributes

./: .gitignore  Cargo.toml  README.md
benches/: lexing_bench.rs
benches/test/: big_component.js
example/: .gitignore
example/components/: hellow.js  suchanhtmlfile.html  suchbutton.js  suchinput.js
src/: lib.rs  main.rs
tests/: tests.rs
tests/mock/: htmlfile.html  jsfile.js
